2009-08-24  Marek Habersack  <mhabersack@novell.com>

	* VirtualPath.cs: Added new constructor which takes virtual and
	physical paths as well as a boolean marking the instance as
	referring to a fake location. Part of fix for bug #463813

2009-07-28 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* HttpApplicationFactory.cs: allow subclasses of EventHandler for
	event handlers in global.asax.
	Fixes bug #525743.

2009-07-23  Marek Habersack  <mhabersack@novell.com>

	* HttpException.cs: if an exception is processed which refers to
	internal "files", don't show the internal name.

2009-07-18  Marek Habersack  <mhabersack@novell.com>

	* HttpContext.cs: GetGlobalResourceObject must look for resources
	in the 'Resources' "namespace" - it was a regression from the
	previous change to that method.

2009-07-15  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: added internal methods to
	enable/disable specific watchers. Part of fix for bug #522017

2009-07-14 Gonzalo Paniagua Javier <gonzalo@novell.com>

	* ApplicationShutdownReason.cs: add new 3.5 value.
	* ParserErrorCollection.cs: add setter for ParserError.
	Patch from Daniel Gagne.

2009-07-14  Marek Habersack  <mhabersack@novell.com>

	* HttpApplicationFactory.cs: OnFileChanged doesn't reload
	application if reload suppression is active.

2009-07-13  Marek Habersack  <mhabersack@novell.com>

	* HttpApplication.cs: LoadType - wrap call to LoadTypeFromBin in
	try/catch so that we can decide whether or not to throw
	exceptions. LoadTypeFromBin - ignore the FileLoadException and
	BadImageException exceptions as they don't matter in this
	context.

2009-07-13  Gert Driesen  <drieseng@users.sourceforge.net>

	* HttpResponseStream.cs: Added argument checks to Write. Modified
	methods/properties that requires a readable stream to throw
	NotSupportedException instead of InvalidOperationException for
	compatibility with MS.

2009-07-09 Gonzalo Paniagua Javier <gonzalo@novell.com>
